<resources>
    <string name="app_name">EmberIot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_add">Add device</string>

    <string name="menu_devices">Devices</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="new_device">New Device</string>
    <string name="edit_device">Edit Device</string>
    <string name="delete_device">Delete Device</string>
    <string name="copy_device_id">Copy Device ID</string>
    <string name="device_id">Device ID</string>
    <string name="device_id_copied">Device ID copied to clipboard.</string>
    <string name="device_view_new">New UI Element</string>
    <string name="device_view_save">Save Device\'s UI</string>
    <string name="device_view_edit">Edit Device\'s UI</string>

    <string name="btn_done">Done</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Strings related to login -->
    <string name="login">Setup</string>
    <string name="login_instructions_header">Getting Started with EmberIot</string>

    <string name="login_instructions_app_1">To get started with EmberIot, make sure you\'ve created a
        n app in your Firebase Console and enabled the Authentication and Realtime Database modules.
        Once that\'s done, you can provide the necessary connection details. This can be done in
        two ways: you can either upload a <b>google-services.json</b> file or type the information
        manually on the next screen. Either way, you\'ll need to create an app in your Firebase Console.</string>

    <string name="login_instructions_app_2_header">Create Your Firebase App Configuration</string>
    <string name="login_instructions_app_3">Step 1: In the Firebase Console, navigate to Project Settings.</string>
    <string name="login_instructions_app_4">Step 2: Under the General tab, click the Add App button and select the Android platform.</string>
    <string name="login_instructions_app_5">Step 3: Set the package name to <b>com.emberiot.emberiot</b> and continue (you don\'t need to fill in the \"optional\" fields).</string>
    <string name="login_instructions_app_6">Step 4: Download the <b>google-services.json</b> file provided after continuing.</string>
    <string name="login_instructions_app_7">Step 5: Click the done button below, you will then need to upload the <b>google-services.json</b> file here.</string>

    <string name="login_login_instructions_header">Great!</string>
    <string name="login_login_instructions1">Your project is all set up! Now, you\'ll just need to
        create a user in your Firebase Console, and that\'ll be the one used to sign into the app.
        You can add as many users as you want and have them sign in on different devices too, if you\'d like.</string>
    <string name="login_login_instructions2">Step 1: Go to the Firebase Authentication page within the console.</string>
    <string name="login_login_instructions3">Step 2: Click the \"Add User\" button.</string>
    <string name="login_login_instructions4">Step 3: Enter the new user\'s info and add the user.</string>
    <string name="login_login_instructions5">Step 4: When that\'s done, click the \"Done\" button below.</string>

    <string name="login_upload_label">Upload google-services.json</string>
    <string name="login_upload_or">Or enter the information manually:</string>
    <string name="login_manual">Submit Information Manually</string>
    <string name="login_invalid_json">The selected JSON file is invalid.</string>
    <string name="login_incomplete_json">The selected JSON file does not have the required fields.</string>
    <string name="login_init_success">Firebase init successful.</string>

    <string name="login_confirmation_title">Delete Firebase Config</string>
    <string name="login_confirmation_message">Are you sure you want to go back to the configuration? All the Firebase settings and data will be deleted from this device.</string>

    <string name="login_appid">Your Firebase APP ID</string>
    <string name="login_webapikey">Your Firebase WebAPI key</string>
    <string name="login_rtdb_url">Your Realtime Database URL</string>
    <string name="login_gcm_sender_id">Your GCM Sender ID (for notifications)</string>
    <string name="login_project_id">Your Firebase Project ID</string>

    <string name="login_email">Login Email</string>
    <string name="login_pass">Login Password</string>
    <string name="login_signin">Sign In</string>
    <string name="login_invalid">Invalid email or password.</string>

    <string name="login_back">Back to Config</string>

    <string name="notifications_header">Notifications</string>
    <string name="developer_header">Developer Settings</string>
    <string name="account_header">Account</string>
    <string name="logout">Logout</string>
    <string name="notifications_title">Enable notifications</string>
    <string name="developer_mode">Developer mode</string>
    <string name="select_device_icon">Select Device Icon</string>
    <string name="device_name">Device Name</string>
    <string name="add_new_channel">Add New Data Channel</string>
    <string name="edit_new_channel">Edit Data Channel</string>
    <string name="new_channel_name">Channel Name</string>
    <string name="enter_value_text">Enter Value Text</string>
    <string name="add_new_value">Add New Value</string>
    <string name="channel_value">Channel Value</string>
    <string name="remove_item_from_values_list">Remove item from values list</string>

    <string name="property_type_int">Integer</string>
    <string name="property_type_double">Decimal</string>
    <string name="property_type_string">String</string>
    <string name="property_type_enum">Enumeration</string>
    <string name="select_a_channel_data_type">Channel Data Type</string>
    <string name="invalid_name">Invalid data channel name.</string>
    <string name="invalid_type">Invalid data channel type.</string>
    <string name="invalid_values">You need at least one value for the type \"Enumeration\".</string>

    <string name="delete_channel">Delete Data Channel</string>
    <string name="delete_channel_m">Are you sure you want to remove this data channel?</string>

    <string name="device_invalid_name">The device requires a name.</string>
    <string name="device_context_menu">Device</string>

    <string name="edit_device_ui_confirmation_title">Confirm Action</string>
    <string name="edit_device_ui_exit_confirmation_body">Are you sure you want to go back? You will lose any unsaved changes.</string>
    <string name="edit_device_ui_save_confirmation_body">Are you sure you want to save your changes?</string>
    <string name="confirm">Confirm</string>
    <string name="logout_confirm">Are you sure you want to sign off the app?</string>

    <string name="add_new_ui_element">Add new UI element</string>
    <string name="sample">Sample</string>

    <string name="ui_element_button_name">Button</string>
    <string name="ui_element_button_desc">Toggle or push change a data channel.</string>
    <string name="ui_element_text_name">Text</string>
    <string name="ui_element_text_desc">Show text on screen based on a data channel\'s value (or not).</string>
    <string name="ui_element_edit_name">Text Field</string>
    <string name="ui_element_edit_desc">Type text and send it to a data channel.</string>
    <string name="ui_element_select_name">Select Field</string>
    <string name="ui_element_select_desc">Select options from a enum type data channel.</string>

    <string name="select_channel">Select a Data Channel</string>
    <string name="select_channel_desc">Bind this UI element to a data channel.</string>
    <string name="bound_channel_desc">This UI Element is bound to the selected channel.</string>
    <string name="remove_datachannel_bind">Remove data channel binding</string>
    <string name="add_channel_bind">Add data channel binding</string>
    <string name="label_hint">Label text (or leave empty for no label)</string>
    <string name="label_config">Label Type</string>
    <string name="text_on">Text while ON</string>
    <string name="text_off">Text while OFF</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="type_push">Push</string>
    <string name="type_toggle">Toggle</string>
    <string name="style">Style</string>
    <string name="style_round">Round</string>
    <string name="style_circle">Circle</string>
    <string name="style_square">Square</string>
    <string name="prefix">Prefix</string>
    <string name="unit">Unit</string>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="label_top_start">Top Left</string>
    <string name="label_top_end">Top Right</string>
    <string name="label_top_center">Top Center</string>
    <string name="label_bottom_start">Bottom Left</string>
    <string name="label_bottom_end">Bottom Right</string>
    <string name="label_bottom_center">Bottom Center</string>
    <string name="none">None</string>

    <string name="select_data_channel">Select Data Channel</string>
    <string name="hint">Hint</string>
    <string name="default_val">Default Value</string>

    <string name="sample_unit">U</string>
    <string name="sample_prefix">Prefix:</string>
    <string name="sample_off">OFF</string>
    <string name="sample_on">ON</string>
    <string name="sample_hint">Sample Text</string>

    <string name="delete_element">Delete Element</string>
    <string name="select_hint">Hint text</string>

    <string name="read_only">Read-only</string>

    <string name="edit_type_text">Text</string>
    <string name="edit_type_number">Number</string>
    <string name="edit_type_date">Date</string>
    <string name="invalid_key">Invalid Firebase configuration, please submit valid info.</string>

    <string name="slide_from">Start Value</string>
    <string name="slide_to">End Value</string>
    <string name="slide_step">Step Size</string>
    <string name="slider">Slider</string>
    <string name="slider_desc">Select a value within a range.</string>

    <string name="cant_enable_notif_dialog">Your app is not configured with a Firebase Cloud Messaging ID. To enable notifications, please log out and reconfigure the app, ensuring this property is included.</string>
    <string name="enable_notif_dialog">Enable notifications for this app to receive alerts from your devices.</string>
    <string name="disable_notif_dialog">Disable notifications for this app to stop receiving alerts from your devices.</string>
    <string name="goto_settings">Go to Settings</string>
    <string name="close">Close</string>
</resources>