<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.emberiot.emberiot.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_devices"
            app:destination="@id/nav_devices"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_devices"
        android:name="com.emberiot.emberiot.devices.DeviceListFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_device" >
        <action
            android:id="@+id/action_nav_devices_to_nav_settings"
            app:popUpTo="@id/nav_devices"
            app:popUpToInclusive="true"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_devices_self"
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_devices"
            app:destination="@id/nav_devices" />
        <action
            android:id="@+id/action_nav_devices_to_newDeviceFragment"
            app:destination="@id/newDeviceFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.emberiot.emberiot.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_device" >
        <action
            android:id="@+id/action_nav_settings_to_nav_devices"
            app:popUpTo="@id/nav_settings"
            app:popUpToInclusive="true"
            app:destination="@id/nav_devices" />
        <action
            android:id="@+id/action_nav_settings_self"
            app:popUpTo="@id/nav_settings"
            app:popUpToInclusive="true"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_settings_to_login"
            app:popUpTo="@id/nav_settings"
            app:popUpToInclusive="true"
            app:destination="@id/nav_login" />
    </fragment>
    <fragment
        android:id="@+id/newDeviceFragment"
        android:name="com.emberiot.emberiot.devices.NewDeviceFragment"
        android:label="@string/new_device" />
    <fragment
        android:id="@+id/viewDeviceFragment"
        android:name="com.emberiot.emberiot.device_view.DeviceViewFragment"
        android:label="@string/device_name" />
    <fragment
        android:id="@+id/uiObjectConfigFragment"
        android:name="com.emberiot.emberiot.device_view.UiElementConfigFragment" />
</navigation>